# lightcast

./: README.md  Taskfile.yaml  pyproject.toml
.github/workflows/: tests.yaml
lightcast/: __init__.py  __main__.py  cli.py  core.py
tests/: test_integration.py  test_parsing.py
